kubernetes/clusters/home/4-apps/arr-stack/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr-stack
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20 # {"$imagepolicy": "flux-system:sonarr"}
          ports:
            - name: http
              containerPort: 8989
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 10Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv-media
              mountPath: /tv-media
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: tv-media
          persistentVolumeClaim:
            claimName: sonarr-tv-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: sonarr-downloads-pvc
