kubernetes/clusters/home/4-apps/arr-stack/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sonarr
  namespace: arr-stack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - sonarr.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: sonarr.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
